----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-06-07 Michal Čihař  <michal@cihar.com>
    * lang/czech: Updated.

2004-06-07 Alexander M. Turek  <me@derrabus.de>
    * css/phpmyadmin.css.php: beautifications.
    * server_databases.php, server_privileges.php, css/phpmyadmin.css.php:
      Enabled new icons for privileges administration (patch #947190).
    * lang/*.inc.php, libraries/mysql_charsets.lib.php: The new collation page
      latin1_spanish_ci (introduced with MySQL 4.1.2) is now described
      correctly.
    * lang/german-*.inc.php: Updates.

2004-06-06 Garvin Hicking <me@supergarv.de>
    * libraries/display_tbl.lib.php, libraries/functions.js,
      css/phpmyadmin.css.php: Further fixing of broken vertical
      column highlighting; empty repeated header cells are now <th>, not
      <td>. Adjusted CSS to not change visual display of those.
    * (same files): Optimized unneccessary preg_replace.

2004-06-04 Michal Čihař  <michal@cihar.com>
    * libraries/read_dump.lib.php: Do not strip comments here.
    * libraries/sqlparser.lib.php: Handle correctly all MySQL comments (-- can
      be followed with any control char) (patch #965106).
    * lang/danish: Updated, thanks to AlleyKat - dk_alleykat.

2004-06-04 Garvin Hicking <me@supergarv.de>
    * Bug #959320: Broken row highlighting in vertical
      browsing mode fixed. The pointer will now highlight
      columns as expected and unmark the row after unclicking.

2004-06-03 Alexander M. Turek  <me@derrabus.de>
    * header.inc.php: Undefined variable.

2004-06-03 Michal Čihař  <michal@cihar.com>
    * db_details_links.php, header.inc.php, server_links.inc.php,
      tbl_properties_links.php, css/phpmyadmin.css.php: Use classes for
      heading (RFE #965542).
    * libraries/common.lib.php: Add drop class also to td (RFE #946540).
    * db_details.php, db_details_structure.php, css/phpmyadmin.css.php: CSSize
      error messages.