@@ -5,6 +5,10 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2004-06-07 Marc Delisle  <lem9@users.sourceforge.net>
+    * libraries/dbi/mysqli.dbi.lib.php: omit last parameter when calling
+      mysqli_connect() to enable the use of default socket
+
 2004-06-07 Michal Čihař  <michal@cihar.com>
     * lang/czech: Updated.
 
